examples/c/error-codes/violates-constraint/fatal/CV-TDG4-bad-static.output
CV-TDG4-bad-static.c:3:10: error: illegal storage class on file-scoped variable
auto int a;
         ^
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-qCRYp/pp-AWoq9.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
